// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Snapshots should match snapshot with Text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 48,
          "fontWeight": "500",
          "lineHeight": 56,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 32,
          "fontWeight": "500",
          "lineHeight": 40,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    inverted={false}
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontWeight": "400",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontWeight": "500",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontWeight": "700",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Rubik",
          "fontWeight": "900",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
</View>
`;

exports[`<Text /> Snapshots should match snapshot with Text variant 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#F46152",
          "fontFamily": "Rubik",
          "fontSize": 48,
          "fontWeight": "500",
          "lineHeight": 56,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="primary"
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#652CDB",
          "fontFamily": "Rubik",
          "fontSize": 40,
          "fontWeight": "500",
          "lineHeight": 48,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="secondary"
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#22766B",
          "fontFamily": "Rubik",
          "fontSize": 32,
          "fontWeight": "500",
          "lineHeight": 40,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="tertiary"
  >
    Live the mission
  </Text>
</View>
`;

exports[`<Text /> Snapshots should match snapshot with inverted Text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    inverted={true}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
</View>
`;
